--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding: 2rem 100px;
+  padding: 2rem 175px;
 }
 
 ul {
@@ -61,5 +61,81 @@ h1 {
   max-width: 600px;
   border: 2px solid var(--white);
   padding: 2rem;
-  margin: 100px;
+  margin: 100px 175px;
 }
+
+/* --- main --- */
+
+main {
+  margin: 175px;
+}
+
+h2 {
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+
+.interactive {
+  position: relative;
+  z-index: 1;
+}
+
+.interactive__description {
+  width: 450px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding-left: 100px;
+  padding-top: 100px;
+  background-color: var(--white);
+  z-index: 2;
+}
+
+.interactive__description p {
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.creations {
+  margin-top: 100px;
+}
+
+.creations__title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.creations__title button {
+  height: 40px;
+  background-color: var(--white);
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  padding: 0 2rem;
+  cursor: pointer;
+}
+
+.creation {
+  width: 256px;
+  height: 450px;
+  background-image: url('../images/desktop/image-deep-earth.jpg');
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-top: 1.5rem;
+}
+
+.creations__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 3rem;
+}
+
+.creation h3 {
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin: 2rem;
+}
+
+/* --- footer --- */
