--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,18 +29,19 @@ header {
   height: 70vh;
   max-width: 100%;
   margin: auto;
-
   background-image: url('../images/desktop/image-hero.jpg');
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 nav {
+  max-width: 1100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  padding: 2rem 175px;
+  padding: 2rem;
+  margin: auto;
 }
 
 ul {
@@ -54,6 +55,31 @@ li a {
   font-weight: bold;
 }
 
+.nav__link {
+  position: relative;
+}
+
+.underline:after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 80%;
+  height: 2px;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition: transform 0.3s ease-out;
+  background-color: var(--white);
+}
+
+.underline:hover:after {
+  transform: scaleX(1);
+  transform-origin: center;
+}
+
 h1 {
   color: var(--white);
   text-transform: uppercase;
@@ -61,13 +87,14 @@ h1 {
   max-width: 600px;
   border: 2px solid var(--white);
   padding: 2rem;
-  margin: 100px 175px;
+  margin: 100px 300px;
 }
 
 /* --- main --- */
 
 main {
-  margin: 175px;
+  max-width: 1100px;
+  margin: 200px auto;
 }
 
 h2 {
@@ -114,6 +141,11 @@ h2 {
   cursor: pointer;
 }
 
+.creations__title button:hover {
+  background-color: var(--black);
+  color: var(--white);
+}
+
 .creation {
   width: 256px;
   height: 450px;
@@ -122,6 +154,8 @@ h2 {
   justify-content: center;
   align-items: flex-end;
   margin-top: 1.5rem;
+  cursor: pointer;
+  color: var(--white);
 }
 
 .creations__list {
@@ -132,7 +166,6 @@ h2 {
 }
 
 .creation h3 {
-  color: var(--white);
   text-transform: uppercase;
   font-size: 2rem;
   margin: 2rem;
@@ -143,19 +176,81 @@ h2 {
 footer {
   background-color: var(--black);
   color: var(--white);
-}
-
-.logo {
-  margin: auto 1rem;
-  width: 150px;
-}
-
-.footer__containers {
-  padding: 1rem 175px;
+  margin: auto;
   display: flex;
   justify-content: space-between;
 }
 
-.icon {
+.logo {
   margin-left: 1rem;
+  margin-bottom: 1rem;
+  width: 150px;
+}
+
+.footer__containers {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.right {
+  text-align: end;
+}
+
+.icon {
+  position: relative;
+  margin-left: 1rem;
+  margin-bottom: 1rem;
+}
+
+@media screen and (max-width: 1440px) {
+  h1 {
+    margin-left: 175px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  main {
+    margin: 2rem;
+  }
+
+  .creations__list {
+    justify-content: start;
+  }
+
+  .creation {
+    margin: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .creation {
+    margin: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  footer {
+    flex-direction: column;
+    justify-content: center;
+    padding: 1rem;
+  }
+
+  .footer__containers {
+    padding: 0;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .logo {
+    margin: 1rem auto;
+  }
+
+  .footer__containers ul {
+    flex-direction: column;
+  }
+
+  .footer__containers ul li {
+    margin: 1rem auto;
+    width: fit-content;
+  }
 }
