--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,12 @@
 }
 
 /* --- base --- */
-body {
+html {
   font-size: 15px;
+}
+
+body {
+  font-size: 1rem;
   font-family: 'Josefin Sans', sans-serif;
   width: 100%;
 }
@@ -26,231 +30,42 @@ body {
 
 /* --- header --- */
 header {
-  height: 70vh;
-  max-width: 100%;
-  margin: auto;
   background-image: url('../images/desktop/image-hero.jpg');
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+  height: 70vh;
 }
 
 nav {
-  max-width: 1100px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  height: 100px;
-  padding: 2rem;
-  margin: auto;
+  padding: 50px 150px;
 }
 
 ul {
   display: flex;
+  align-items: center;
 }
 
 li a {
-  color: var(--white);
   text-decoration: none;
-  margin: auto 1rem;
+  color: var(--white);
+  margin: 2rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 
-.nav__link {
-  position: relative;
-}
-
-.underline:after {
-  content: '';
-  position: absolute;
-  bottom: -10px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 80%;
-  height: 2px;
-  border-radius: 5px;
-  transform: scaleX(0);
-  transform-origin: center;
-  transition: transform 0.3s ease-out;
-  background-color: var(--white);
-}
-
-.underline:hover:after {
-  transform: scaleX(1);
-  transform-origin: center;
+.title {
+  margin-left: 150px;
+  margin-top: 100px;
+  color: var(--white);
+  border: 2px solid var(--white);
+  width: 600px;
 }
 
 h1 {
-  color: var(--white);
+  padding: 30px;
+  font-size: 5rem;
   text-transform: uppercase;
-  font-size: 4rem;
-  max-width: 600px;
-  border: 2px solid var(--white);
-  padding: 2rem;
-  margin: 100px 300px;
-}
-
-/* --- main --- */
-
-main {
-  max-width: 1100px;
-  margin: 200px auto;
-}
-
-h2 {
-  text-transform: uppercase;
-  font-size: 3rem;
-}
-
-.interactive {
-  position: relative;
-  z-index: 1;
-}
-
-.interactive__description {
-  width: 450px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  padding-left: 100px;
-  padding-top: 100px;
-  background-color: var(--white);
-  z-index: 2;
-}
-
-.interactive__description p {
-  margin-top: 1rem;
-  font-size: 1rem;
-}
-
-.creations {
-  margin-top: 100px;
-}
-
-.creations__title {
-  display: flex;
-  justify-content: space-between;
-}
-
-.creations__title button {
-  height: 40px;
-  background-color: var(--white);
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  padding: 0 2rem;
-  cursor: pointer;
-}
-
-.creations__title button:hover {
-  background-color: var(--black);
-  color: var(--white);
-}
-
-.creation {
-  width: 256px;
-  height: 450px;
-  background-image: url('../images/desktop/image-deep-earth.jpg');
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  margin-top: 1.5rem;
-  cursor: pointer;
-  color: var(--white);
-}
-
-.creations__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 3rem;
-}
-
-.creation h3 {
-  text-transform: uppercase;
-  font-size: 2rem;
-  margin: 2rem;
-}
-
-/* --- footer --- */
-
-footer {
-  background-color: var(--black);
-  color: var(--white);
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-
-.logo {
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-  width: 150px;
-}
-
-.footer__containers {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.right {
-  text-align: end;
-}
-
-.icon {
-  position: relative;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
-}
-
-@media screen and (max-width: 1440px) {
-  h1 {
-    margin-left: 175px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  main {
-    margin: 2rem;
-  }
-
-  .creations__list {
-    justify-content: start;
-  }
-
-  .creation {
-    margin: 1.5rem;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .creation {
-    margin: 0.5rem;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  footer {
-    flex-direction: column;
-    justify-content: center;
-    padding: 1rem;
-  }
-
-  .footer__containers {
-    padding: 0;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .logo {
-    margin: 1rem auto;
-  }
-
-  .footer__containers ul {
-    flex-direction: column;
-  }
-
-  .footer__containers ul li {
-    margin: 1rem auto;
-    width: fit-content;
-  }
 }
