--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,12 @@ body {
   width: 100%;
 }
 
+h1,
+h2,
+h3 {
+  text-transform: uppercase;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -40,7 +46,7 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  padding: 50px 150px;
+  padding: 50px 175px;
 }
 
 ul {
@@ -57,15 +63,51 @@ li a {
 }
 
 .title {
-  margin-left: 150px;
+  margin-left: 175px;
   margin-top: 100px;
   color: var(--white);
   border: 2px solid var(--white);
-  width: 650px;
+  width: 600px;
 }
 
 h1 {
   padding: 30px;
   font-size: 5rem;
-  text-transform: uppercase;
+}
+
+/* --- main --- */
+main {
+  padding: 50px 175px;
+}
+
+h2 {
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+}
+
+.interactive {
+  position: relative;
+  margin: 4rem 0;
+}
+
+.interactive__image {
+  height: 500px;
+  background-image: url('../images/desktop/image-interactive.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.interactive__description {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  background-color: var(--white);
+  padding-left: 6rem;
+  padding-top: 6rem;
+  width: 400px;
+}
+
+.interactive__description p {
+  font-size: 1rem;
+  line-height: 1.3rem;
 }
