--- a/styles/styles.css
+++ b/styles/styles.css
@@ -47,6 +47,7 @@ nav {
   display: flex;
   justify-content: space-between;
   padding: 50px 175px;
+  max-width: 1440px;
 }
 
 ul {
@@ -104,6 +105,7 @@ h1 {
 /* --- main --- */
 main,
 footer {
+  max-width: 1440px;
   padding: 50px 175px;
 }
 
@@ -166,23 +168,23 @@ button:hover {
 .creations__list {
   margin: 4rem 0;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  align-content: start;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  gap: 1.5rem;
 }
 
 .creation {
   position: relative;
   background-image: url('../images/desktop/image-deep-earth.jpg');
   background-repeat: no-repeat;
+  background-position: center;
   height: 430px;
 }
 
 .creation h3 {
   position: absolute;
   bottom: 20px;
-  left: 20px;
+  left: 30px;
   color: var(--white);
   font-size: 1.8rem;
   width: 100px;
