--- a/styles/styles.css
+++ b/styles/styles.css
@@ -169,7 +169,11 @@ button:hover {
   margin: 4rem 0;
   display: grid;
   align-content: start;
+  /* grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr); */
   grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  /* grid-column-gap: 20px;
+  grid-row-gap: 20px; */
   gap: 1.5rem;
 }
 
@@ -184,7 +188,7 @@ button:hover {
 .creation h3 {
   position: absolute;
   bottom: 20px;
-  left: 30px;
+  left: 20px;
   color: var(--white);
   font-size: 1.8rem;
   width: 100px;
