--- a/styles/styles.css
+++ b/styles/styles.css
@@ -171,7 +171,7 @@ button:hover {
   align-content: start;
   /* grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr); */
-  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
   /* grid-column-gap: 20px;
   grid-row-gap: 20px; */
   gap: 1.5rem;
@@ -179,19 +179,36 @@ button:hover {
 
 .creation {
   position: relative;
-  background-image: url('../images/desktop/image-deep-earth.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
+  height: 430px;
+  margin: auto;
+}
+
+.creation img {
   height: 430px;
 }
 
-.creation h3 {
+.creation__title {
+  display: flex;
+  align-items: flex-end;
   position: absolute;
-  bottom: 20px;
-  left: 20px;
+  top: 0;
+  left: 0;
   color: var(--white);
   font-size: 1.8rem;
-  width: 100px;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.creation__title:hover {
+  color: black;
+  background-color: rgb(255, 255, 255, 0.6);
+}
+
+.creation h3 {
+  width: 140px;
+  margin: 2rem;
 }
 
 /* --- footer --- */
@@ -232,3 +249,5 @@ footer ul {
   margin-bottom: 2rem;
   cursor: pointer;
 }
+
+/* --- Responsive --- */
