--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,6 +48,23 @@ nav {
   justify-content: space-between;
   padding: 50px 175px;
   max-width: 1440px;
+  position: relative;
+}
+
+nav .toggle-button {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+nav .toggle-button span {
+  height: 4px;
+  width: 35px;
+  background-color: #fff;
+  display: block;
+  margin-bottom: 5px;
 }
 
 ul {
@@ -58,7 +75,7 @@ ul {
 li a {
   text-decoration: none;
   color: var(--white);
-  margin: 1.2rem;
+  margin: 0 1.2rem;
   font-size: 1rem;
   font-weight: bold;
 }
@@ -251,3 +268,29 @@ footer ul {
 }
 
 /* --- Responsive --- */
+
+@media screen and (max-width: 1000px) {
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    background-color: var(--black);
+    padding: 1rem;
+    height: 100vh;
+  }
+
+  nav > ul {
+    flex-direction: column;
+    color: var(--white);
+    text-transform: uppercase;
+    align-items: flex-start;
+    margin-top: 4rem;
+  }
+
+  li {
+    margin: 0.5rem 0;
+  }
+  li a {
+    margin: 0;
+  }
+}
