--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,6 +119,22 @@ h1 {
   transform-origin: center;
 }
 
+nav .toggle-button {
+  display: none;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+}
+
+nav .toggle-button span {
+  height: 4px;
+  width: 35px;
+  background-color: #fff;
+  display: block;
+  margin-bottom: 5px;
+}
+
 /* --- main --- */
 main,
 footer {
@@ -268,29 +284,63 @@ footer ul {
 }
 
 /* --- Responsive --- */
-
 @media screen and (max-width: 1000px) {
   nav {
+    padding: 2rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  nav,
+  nav ul {
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-start;
-    background-color: var(--black);
-    padding: 1rem;
-    height: 100vh;
   }
 
-  nav > ul {
-    flex-direction: column;
-    color: var(--white);
+  nav {
+    background-color: transparent;
+    height: fit-content;
+    z-index: 1;
+    justify-content: flex-start;
+    padding: 2rem;
     text-transform: uppercase;
-    align-items: flex-start;
-    margin-top: 4rem;
+    position: relative;
+  }
+
+  ul {
+    margin-top: 6rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: calc(100% - 60px);
+    width: 100%;
+    /* overflow: auto; */
+    background-color: transparent;
+    transition: all 0.3s ease-out;
+    transform: translateY(-100%);
+  }
+
+  nav.active {
+    background-color: var(--black);
+  }
+
+  nav ul.active {
+    transform: translateY(0);
+    background-color: var(--black);
   }
 
   li {
-    margin: 0.5rem 0;
+    margin: 1rem 0.6rem;
   }
   li a {
-    margin: 0;
+    margin: 0 20px;
+  }
+
+  nav .toggle-button {
+    position: fixed;
+    display: block;
+    top: 35px;
+    right: 30px;
   }
 }
